<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="empty_string"></string>
    <string name="app_name">MarketListo</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MarketListo - Items</string>
    <string name="edit_message">Enter the new item title</string>
    <string name="app_description">The simpliest app to shopping.</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="title_activity_simple">Simple</string>
    <string name="list_header">Items</string>
    <string name="button_clear">Unmark All</string>
    <string name="button_save">Save</string>
    <string name="title_activity_list_selector">List Selector</string>
    <string name="title_activity_custom_row">Custom Row</string>
    <string name="title_activity_add_item">Add new item</string>
    <string name="button_add_new_item">Add</string>
    <string name="button_cancel_new_item">Cancel</string>
    <string name="button_add_new">Add New</string>
    <string name="textbox_new_item_title">Item name</string>
    <string name="button_delete_all">Delete checked</string>
    <string name="button_quantity">Quantity:</string>
    <string name="button_clear_alert">The checkboxes have been cleared!</string>
    <string name="button_delete_checked_alert">The items have been deleted!</string>
    <string name="button_delete_checked_confirmation">"Are you sure you want to delete the selected items?"</string>
    <string name="button_delete_all_checked_confirmation">"Are you sure you want to delete all?"</string>
   
    <string name="button_delete_checked_performed">"The item has been deleted!"</string>
    <string name="exit_confirmation"> "Are you sure you want to exit?"</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add_performed">"The new item has been added!"</string>
    <string name="action_add_error">"Please type a valid value!"</string>
    <string name="search_title">Search</string>
    <string name="button_capture">Capture</string>
    <string name="textbox_price">Price:</string>
	<string name="empty_quantity_alert">Please type the quantity.</string>
	<string name="empty_price_alert">Please type the price.</string>
</resources>